client/app/css/main.css
/* ... */
.invisible {
  opacity: 0;
}

.ngb-dp-week > .ngb-dp-weekday {
  color: #205282;
}

.multiselect-item-checkbox {
  font-weight: normal;
}

.uib-datepicker-popup {
  padding: 5px;
  margin: 0;
}

.uib-datepicker {
  padding: 5px;
}

.uib-button-bar>.btn-group>.btn-info {
  display: none;
}

.uib-button-bar>.btn-success {
  display: none;
}

.uib-datepicker th,
.uib-datepicker td {
  white-space: nowrap;
  min-width: 0;
  padding: 2px;
}

.filter-selected {
  color: #377abc;
}

.uib-datepicker button {
  background: #fff;
  color: grey;
}

.full button {
  background: #dde3ed;
  color: #2866a2;
}

.uib-datepicker button:active {
  background: #dde3ed;
  color: #2866a2;
}

.uib-datepicker button:hover {
  background: #dde3ed;
  color: #2866a2;
}

.table-responsive {
  overflow: inherit;
}

.dropdown-multi-select-container {
  position: relative;
}

.form-control {
  background-color: #f5f7fa;
}

.form-control:hover {
  background-color: #fff;
}

.h1,
h1 {
  font-size: 1.6em;
}

.h2,
h2 {
  font-size: 1.5em;
}

.h3,
h3 {
  font-size: 1.4em;
}

.h4,
h4 {
  font-size: 1.3em;
}

.h5,
h5 {
  font-size: 1.2em;
}

.h6,
h6 {
  font-size: 1.1em;
}

.container-fluid {
  padding: 0;
}

.nav-tabs .nav-item.show .nav-link,
.nav-tabs .nav-link.active {
  color: #103253;
}

.table thead th {
  border-top: 0;
}

.btn {
  font-weight: bold;
}

.nav,
.pagination,
.carousel,
.card-title a {
  cursor: pointer;
}

.card {
  margin-bottom: 1em;
}

#ReceiverContextAdder{
  margin-bottom: 5px;
}

#sidebar a {
  display: block;
  margin-bottom: 0.5em;
}

.mt-auto {
  margin-top: auto;
}

.mb-auto {
  margin-bottom: auto;
}

#sidebar a.active,
#sidebar a:active.active,
#sidebar a:hover.active,
#sidebar a:focus.active {
  border-bottom: 1px solid #c8d1e0;
  width: max-content;
}

#content-box {
  padding: 1em;
}

.nav-link {
  color: #205282;
  font-weight: bold;
}

.nav-link:hover {
  color: #103253;
}

.nav-item.active .nav-link {
  color: #103253;
}

#footer-box,
#demo-badge,
#privacy-badge {
  padding: 1em;
}

table tr {
  height: 50px;
}

table tr td {
  vertical-align: middle;
}

.badge.bg-primary {
  background-color: #205282;
}

.badge.bg-primary:hover {
  background-color: #c2d9f0;
}

.page-link {
  color: #205282;
}

.btn-link {
  color: #205282;
  text-decoration: none;
}

.context-image,
.receiver-image {
  height: 10rem;
  max-width: 20rem;
}

.title {
  font-weight: bold;
}

#privacy-badge {
  background-color: #1d1f24;
  color: #fff;
}

.tab-content {
  padding-top: 1em;
}

.preformatted {
  white-space: pre-wrap;
}

.image-upload {
  position: relative;
  border: 1px dashed #c8d1e0;
  z-index: 0;
  text-align: center;
  height: 10.4rem;
  width: 10.4rem;
  min-height: 10.4rem;
}

.image-upload .change-picture-button {
  position: absolute;
  bottom: 1rem;
  text-align: center;
  z-index: 10;
}

.image-thumbnail,
.image-upload-thumbnail,
.image-upload-thumbnail img {
  height: 10rem;
  width: 10rem;
}

.image-upload-thumbnail img {
  vertical-align: middle;
  text-align: center;
  z-index: 1;
}

.login-error-box-homepage {
  display: inline-block;
  margin: 1em;
}

.login-form {
  min-width: 320px;
}

.large-close-button {
  font-size: 24px;
  padding: 10px;
}

.custom-close-button {
  font-size: 23px;
  font-weight: bold;
  color: #737373;
  background: #00000000;
  border: none;
  position: absolute;
  right: 10px;
  top: 0;
}

.alert-danger-console{
  color: black;
  border: 1px solid #c8d1e0;
}

.recovery-key-input {
  width: 64rem;
  text-align: center;
}

.nested {
  padding-left: 1em;
}

.nested {
  padding-right: 1em;
}

.file-preview {
  position: relative;
  height: 12rem;
}

.img-preview {
  height: 10rem;
  width: 10rem;
}

.img-preview img {
  height: 100%;
  width: 100%;
}

.file-upload {
  position: absolute;
  top: 0;
  z-index: 100;
  height: 10rem;
  width: 10rem;
  text-align: center;
  line-height: 10rem;
  border: 1px solid #c8d1e0;
}

.file-upload-icon {
  font-size: 2rem;
}

.file-upload-progress {
  margin-top: 1em;
}

.message,
.message-whistle-blower {
  padding: 1em;
  border: 1px solid #c8d1e0;
}

.table {
  --bs-table-striped-bg: #f5f7fa;
}

#logo-box img {
  max-height: 5rem;
  max-width: 20rem;
  margin: 0;
}

logo-box {
  margin: 0;
}

#toolbar {
  margin-bottom: 1em;
}

.modal-title {
  font-size: 1.4rem;
}

#tip-list table {
  table-layout: auto;
}

#tip-list th,
#tip-list td {
  white-space: nowrap;
}

@keyframes fade-inout {

  0%,
  100% {
    opacity: 0;
  }

  50% {
    opacity: 1;
  }
}

.file-info-row {
  margin-top: 1em;
}

.whistle-blower-file .top-row {
  min-height: 30px;
}

.disabled-interface {
  pointer-events: none;
  user-select: none;
  opacity: 0.6;
}

.audio-box {
  position: relative;
  border: 1px solid #f5f7fa;
  background-color: #f5f7fa;
  border-radius: 5px;
  padding: 0.5em;
  display: flex;
  flex-direction: column;
}

.audio-player {
  background: #f5f7fa;
  border-radius: 50px;
  margin: 1em;
  border: 1px solid #1d1f24;
  max-width: 90%
}

.audio-player-wrapper[disabled] .audio-player{
  opacity: 0.5;
}

textarea.form-control {
  resize: vertical;
}

.fa-none::before {
  content: "\2122";
  color: transparent;
}

.sup {
  vertical-align: super;
  font-size: smaller;
}

@media screen and (min-width: 768px) {
  .modal-lg .modal-dialog {
    width: 600px;
  }
}

.hidden {
  display: none;
}

.modal-dialog {
  max-width: 900px;
}

.drag-drop {
  padding: 1em;
  background-color: #f5f7fa;
  border: 1px solid #c8d1e0;
}

.drag-drop:hover {
  background-color: #fff;
  border-style: dashed;
}

.custom-file {
  width: auto;
}

label,
p:last-child {
  margin: 0;
}

#homepage-box {
  text-align: center;
  margin: 0 auto;
}

.language-box {
  width: 300px;
}

#whistleblower-submit-box {
  margin-bottom: 2em;
}

#whistle-blowing-question {
  white-space: pre-wrap;
}

#whistleblower-submit-box,
#whistle-blower-login-box {
  text-align: center;
}

.description {
  color: #1d1f2a;
  white-space: pre-wrap;
}
/* ... */

